# jcgt_multihit_2015

optix_snippets/: Flags.h  RayPayload.h  multihit.cu  pinhole_camera_mh.cu
ospray_mh_module/: CMakeLists.txt  mhtk.dox  xray_renderer.cpp  xray_renderer.h  xray_renderer.ispc
